fixed some spacing

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ nav ul{
 }
 
 nav ul li{
-   margin-left: 0 2rem;
+   margin: 0 2rem;
 }
 
 nav ul li a{
